data/derived/sp14/progs/unify/prog3980.ml.out
Characters 67-68:
  | (_,y) -> (0, bigAdd a x) in
                        ^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
